[gd_scene load_steps=7 format=3 uid="uid://ccut60n2dn4he"]

[ext_resource type="Script" path="res://scripts/knife_qte.gd" id="1_mb5f6"]

[sub_resource type="Gradient" id="Gradient_u1was"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.165656, 0.165656, 0.165656, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cn3ea"]
gradient = SubResource("Gradient_u1was")
width = 640

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ribk"]
size = Vector2(60, 60)

[sub_resource type="Gradient" id="Gradient_uuhsn"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.931873, 0.0701051, 0.043072, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0eajc"]
gradient = SubResource("Gradient_uuhsn")
width = 60
height = 60

[node name="KnifeQTE" type="Node2D"]
script = ExtResource("1_mb5f6")

[node name="Background" type="Sprite2D" parent="."]
texture = SubResource("GradientTexture2D_cn3ea")

[node name="HitArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitArea"]
shape = SubResource("RectangleShape2D_7ribk")

[node name="Sprite2D" type="Sprite2D" parent="HitArea"]
texture = SubResource("GradientTexture2D_0eajc")

[node name="HitsContainer" type="Node2D" parent="."]
position = Vector2(-330, 0)

[node name="Border" type="Sprite2D" parent="."]

[connection signal="body_entered" from="HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="body_exited" from="HitArea" to="." method="_on_hit_area_body_exited"]
[connection signal="child_exiting_tree" from="HitsContainer" to="." method="_on_hits_container_child_exiting_tree"]
